Adicionado o preço em uma interação de mouseover no botão de adicionar ao carrinho

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
     <main>
         <section class="card-container">
+            <div class="sub-titulo-tenis-container">
             <h2 class="sub-titulo-tenis">BLUE</h2>
+            </div>
             <figure class="imagem-tenis-container">
             <img class="imagem-tenis" src="./imagens/tenisAzul.png" alt="Tenis Azul">
             </figure>
