--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
             </figure>
             <h1 class="titulo-tenis">AEROBLAZER</h1>
             <p class="descricao-tenis">Com tecnologia avançada e design aerodinâmico, esse tênis é a escolha certa para aumentar sua velocidade e agilidade de forma incrível.</p>
-            <div class="btn-add-container">
+            <div class="bottom-card-container">
+                <div class="tamanho-container">
+                    <p class="titulo-tamanho">Tam</p>
+                    <select name="tamanho" id="tamanho">
+                        <option value="38">38</option>
+                        <option value="39">39</option>
+                        <option value="40">40</option>
+                        <option value="41">41</option>
+                        <option value="42">42</option>
+                        <option value="43">43</option>
+                        <option value="44">44</option>
+                    </select>
+                </div>
                 <button class="btn-add">
                     <span class="material-symbols-outlined add-circle">
                         add_circle
