Adicionado a tag do desconto e estilizada via CSS

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <main>
         <section class="card-container">
+            <div class="desconto"><strong>37% de desconto</strong></div>
             <div class="sub-titulo-tenis-container">
             <h2 class="sub-titulo-tenis">BLUE</h2>
             </div>
