--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             <figure class="imagem-tenis-container">
             <img class="imagem-tenis" src="./imagens/tenisAzul.png" alt="Tenis Azul">
             </figure>
+            <div class="cor">
+                <input type="radio" id="azul" name="corTenis" class="selecao-cor" checked>
+                <input type="radio" id="roxo" name="corTenis" class="selecao-cor">
+                <input type="radio" id="vermelho" name="corTenis" class="selecao-cor">
+            </div>
             <h1 class="titulo-tenis">AEROBLAZER</h1>
             <p class="descricao-tenis">Com tecnologia avançada e design aerodinâmico, esse tênis é a escolha certa para aumentar sua velocidade e agilidade de forma incrível.</p>
             <div class="bottom-card-container">
