Criado a interação de mudança de cor

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </select>
                 </div>
                 <button class="btn-add">
-                    <span class="material-symbols-outlined add-circle">
+                    <span class="material-symbols-outlined add-circle colorAzul">
                         add_circle
                     </span>
                 </button>
