Correção do bug do btn de compra com selecao da cor vermelha, e correção da mudança de subtitulo ao após utilizar o evento mouseout e tentar mudar a cor

--- a/index.html
+++ b/index.html
@@ -15,20 +15,27 @@
 <body>
     <main>
         <section class="card-container">
-            <div class="desconto"><strong>37% de desconto</strong></div>
+            <p class="desconto"><strong>37% de desconto</strong></p>
+
             <div class="sub-titulo-tenis-container">
-            <h2 class="sub-titulo-tenis">BLUE</h2>
+                <h2 class="sub-titulo-tenis">BLUE</h2>
+                <p class="preco display-none">R$ 279,00</p>
             </div>
+
             <figure class="imagem-tenis-container">
-            <img class="imagem-tenis" src="./imagens/tenisAzul.png" alt="Tenis Azul">
+                <img class="imagem-tenis" src="./imagens/tenisAzul.png" alt="Tenis Azul">
             </figure>
+
             <div class="cor">
                 <input type="radio" id="azul" name="corTenis" class="selecao-cor" checked>
                 <input type="radio" id="roxo" name="corTenis" class="selecao-cor">
                 <input type="radio" id="vermelho" name="corTenis" class="selecao-cor">
             </div>
+
             <h1 class="titulo-tenis">AEROBLAZER</h1>
+
             <p class="descricao-tenis">Com tecnologia avançada e design aerodinâmico, esse tênis é a escolha certa para aumentar sua velocidade e agilidade de forma incrível.</p>
+            
             <div class="bottom-card-container">
                 <div class="tamanho-container">
                     <p class="titulo-tamanho">Tam</p>
@@ -42,6 +49,7 @@
                         <option value="44">44</option>
                     </select>
                 </div>
+
                 <button class="btn-add">
                     <span class="material-symbols-outlined add-circle colorAzul">
                         add_circle
